config/samples/01-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: tyk # <----------------- REFERENCES TYK INGRESS CONTROLLER
    tyk.io/template: myapideftemplate # <---------------- REFERENCE TO APIDEFINITION IN SAME NAMESPACE
spec:
  rules:
    - host: foo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
    - http:
        paths:
          - path: /httpbin22222
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
          - path: /httpbin2
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
